src/com/doka/Doka.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Doka.java */
import javax.swing.*;
import java.io.*;

public class Doka/*@bgen(jjtree)*/implements DokaTreeConstants, DokaConstants {/*@bgen(jjtree)*/
  protected static JJTDokaState jjtree = new JJTDokaState();
    private static Boolean displayTree = false;

    public static void main(String args[]) throws ParseException {

        System.out.println("------------------------");
        System.out.println("\u005c") Doka Language ");
        System.out.println("\u005ctv0.0.1");
        System.out.println("------------------------\u005cn");

        if (args.length == 0) {
            System.out.println(
                "doka <params>\u005cn\u005cn" +
                "Examples:\u005cn" +
                "\u005ctdoka ./example.dk\u005ctUse path to load file\u005cn" +
                "\u005ctdoka -i\u005ct\u005ct\u005ctUse GUI to load file\u005cn" +
                "\u005ctdoka -c\u005ct\u005ct\u005ctUse interpreter mode\u005cn" +
                "\u005ctdoka -t <params>\u005ctDisplay parse tree\u005cn" +
                "\u005ctdoka -t ./example.dk\u005ctDisplay parse tree in file mode\u005cn" +
                "\u005ctdoka -t -c\u005ct\u005ctDisplay parse tree in interpreter mode\u005cn" +
                "\u005ctdoka -t -i\u005ct\u005ctDisplay parse tree in GUI mode\u005cn"
            );
            return;
        }

        try {
            for (String arg : args) {
                if (arg.equals("-t")) {
                    System.out.println(">\u005ctUsing display parse tree [-t]");
                    displayTree = true;
                } else if (arg.equals("-c")) {
                    System.out.println(">\u005ctUsing CLI interpreter [-c]");
                    parseInputStream();
                } else if (arg.equals("-i")) {
                    System.out.println(">\u005ctUsing interface [-i]");
                    String path = Doka.getFilePathFromUI();
                    parseFileStream(path);
                } else if (arg.matches("(.*).dk")) {
                    System.out.printf(">\u005ctUsing File [%s]\u005cn", arg);
                    File file = new File(arg);
                    parseFileStream(file.getAbsolutePath());
                } else {
                    System.out.println(
                        "doka <params>\u005cn\u005cn" +
                        "Examples:\u005cn" +
                        "\u005ctdoka ./example.dk\u005ctUse path to load file\u005cn" +
                        "\u005ctdoka -i\u005ct\u005ct\u005ctUse GUI to load file\u005cn" +
                        "\u005ctdoka -c\u005ct\u005ct\u005ctUse interpreter mode\u005cn" +
                        "\u005ctdoka -t <params>\u005ctDisplay parse tree\u005cn"
                    );
                }
            }
        } catch (Exception e) {
            System.out.println(":Error");
            System.out.println(e.getMessage());
        }
    }

    public static void parseFileStream(String path) {
        try {
            System.out.println(">\u005ctParsing...");
            BufferedReader fileBuffer = Doka.getFileBuffer(path);
            Doka parser = new Doka(fileBuffer);
            SimpleNode tree = parser.Main();
            showTree(tree);
        } catch (ParseException e) {
            System.out.println(">\u005ctSyntatic Error");
            System.out.println(e.getMessage());
                } catch (TokenMgrError e) {
            System.out.println(">\u005ctLexical Error");
            System.out.println(e.getMessage());
        } catch (Exception e) {
            System.out.println(">\u005ctError");
            System.out.println(e.getMessage());
        }
    }

    public static void parseInputStream() {
        Doka parser = new Doka(System.in);
        System.out.println(">\u005ctListen for input...\u005cn");

        while (true) {
            try{
                SimpleNode tree = parser.Main();
                showTree(tree);
            } catch (Exception e) {
                System.out.println(":Error");
                System.out.println(e.getMessage());
                Doka.ReInit(System.in);
            }
        }
    }

    public static void showTree(SimpleNode tree) {
        if (displayTree) {
            System.out.println(">\u005ctParse tree");
            tree.dump("\u005ct|\u005ct");
        }
    }

    public static BufferedReader getFileBuffer(String path){
        BufferedReader buffer;

        try {

            System.out.println(">\u005ctReading File");
            File file  = new File(path);
            FileReader reader = new FileReader(file);
            buffer = new BufferedReader(reader);
        } catch (IOException e) {
            buffer = null;
            System.out.println(":Error:IO:getFileBuffer");
            System.out.println(e.getMessage());
        }

        return buffer;
    }

    public static String getFilePathFromUI() {
        JFileChooser chooseFile = new JFileChooser();
        chooseFile.showOpenDialog(null);
        String path = chooseFile.getSelectedFile().getAbsolutePath();
        System.out.println(">\u005ctLoad file: " + path);
        return path;
    }

  static final public SimpleNode Main() throws ParseException {
 /*@bgen(jjtree) Main */
  SimpleNode jjtn000 = new SimpleNode(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
      case EXIT:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
          jj_consume_token(0);
          break;
        case EXIT:
          jj_consume_token(EXIT);
          jj_consume_token(EOL);
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
        {if (true) return jjtn000;}
        break;
      case MODULE:
        jj_consume_token(MODULE);
        jj_consume_token(MODULE_ID);
        jj_consume_token(EOL);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUNCTION:
          case IO_MODULE:
          case LIST_MODULE:
          case EOL:
          case GENERIC_ID:
            ;
            break;
          default:
            jj_la1[1] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case FUNCTION:
          case IO_MODULE:
          case LIST_MODULE:
          case GENERIC_ID:
            block();
            break;
          case EOL:
            jj_consume_token(EOL);
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
          jj_consume_token(0);
          break;
        case EXIT:
          jj_consume_token(EXIT);
          jj_consume_token(EOL);
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
        {if (true) return jjtn000;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

// Blocks
  static final public void block() throws ParseException {
 /*@bgen(jjtree) block */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
      case GENERIC_ID:
        declaration_statements();
        break;
      case IO_MODULE:
      case LIST_MODULE:
        module_statements();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void functinal_declaration_block() throws ParseException {
 /*@bgen(jjtree) functinal_declaration_block */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNCTINAL_DECLARATION_BLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FUNCTION:
        case IO_MODULE:
        case LIST_MODULE:
        case GENERIC_ID:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        block();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_3;
          }
          jj_consume_token(EOL);
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
        declare_condition();
        break;
      case RETURN_ARROW:
        jj_consume_token(RETURN_ARROW);
        label_4:
        while (true) {
          return_expression();
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case EOL:
              ;
              break;
            default:
              jj_la1[8] = jj_gen;
              break label_5;
            }
            jj_consume_token(EOL);
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IO_MODULE:
          case LIST_MODULE:
          case PIPE:
          case START_BRACKET:
          case START_PARAM:
          case START_BLOCK:
          case GENERIC_ID:
          case NUMBER:
          case STRING:
          case BOOLEAN:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// Statements
  static final public void declaration_statements() throws ParseException {
 /*@bgen(jjtree) declaration_statements */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARATION_STATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GENERIC_ID:
        jj_consume_token(GENERIC_ID);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ASSIGN:
          declare_assigment();
          break;
        case START_PARAM:
          callable_function_statements();
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case FUNCTION:
        declare_function();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void module_statements() throws ParseException {
 /*@bgen(jjtree) module_statements */
  SimpleNode jjtn000 = new SimpleNode(JJTMODULE_STATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LIST_MODULE:
        jj_consume_token(LIST_MODULE);
        jj_consume_token(DOT);
        jj_consume_token(GENERIC_ID);
        label_6:
        while (true) {
          declare_function_params();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case START_PARAM:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_6;
          }
        }
        break;
      case IO_MODULE:
        jj_consume_token(IO_MODULE);
        jj_consume_token(DOT);
        jj_consume_token(GENERIC_ID);
        label_7:
        while (true) {
          declare_function_params();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case START_PARAM:
            ;
            break;
          default:
            jj_la1[14] = jj_gen;
            break label_7;
          }
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void callable_function_statements() throws ParseException {
 /*@bgen(jjtree) callable_function_statements */
  SimpleNode jjtn000 = new SimpleNode(JJTCALLABLE_FUNCTION_STATEMENTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_8:
      while (true) {
        declare_function_params();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case START_PARAM:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_8;
        }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// Declarations
  static final public void declare_assigment() throws ParseException {
 /*@bgen(jjtree) declare_assigment */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARE_ASSIGMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ASSIGN);
      label_9:
      while (true) {
        expression();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IO_MODULE:
        case LIST_MODULE:
        case START_BRACKET:
        case START_PARAM:
        case START_BLOCK:
        case GENERIC_ID:
        case NUMBER:
        case STRING:
        case BOOLEAN:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_9;
        }
      }
      jj_consume_token(EOL);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void declare_condition() throws ParseException {
 /*@bgen(jjtree) declare_condition */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARE_CONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      declare_conditional_params();
      jj_consume_token(START_BLOCK);
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_10;
        }
        jj_consume_token(EOL);
      }
      functinal_declaration_block();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_11;
        }
        jj_consume_token(EOL);
      }
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ELSEIF:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_12;
        }
        jj_consume_token(ELSEIF);
        declare_conditional_params();
        jj_consume_token(START_BLOCK);
        label_13:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_13;
          }
          jj_consume_token(EOL);
        }
        functinal_declaration_block();
        label_14:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[22] = jj_gen;
            break label_14;
          }
          jj_consume_token(EOL);
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        jj_consume_token(ELSE);
        jj_consume_token(START_BLOCK);
        label_15:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[23] = jj_gen;
            break label_15;
          }
          jj_consume_token(EOL);
        }
        functinal_declaration_block();
        label_16:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case EOL:
            ;
            break;
          default:
            jj_la1[24] = jj_gen;
            break label_16;
          }
          jj_consume_token(EOL);
        }
        break;
      default:
        jj_la1[25] = jj_gen;
        ;
      }
      jj_consume_token(END_BLOCK);
      jj_consume_token(EOL);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void declare_lambda_function() throws ParseException {
 /*@bgen(jjtree) declare_lambda_function */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARE_LAMBDA_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(START_BLOCK);
      declare_function_params();
      jj_consume_token(ARROW);
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[26] = jj_gen;
          break label_17;
        }
        jj_consume_token(EOL);
      }
      return_expression();
      label_18:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[27] = jj_gen;
          break label_18;
        }
        jj_consume_token(EOL);
      }
      jj_consume_token(END_BLOCK);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void declare_function() throws ParseException {
 /*@bgen(jjtree) declare_function */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARE_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FUNCTION);
      jj_consume_token(GENERIC_ID);
      declare_function_params();
      jj_consume_token(START_BLOCK);
      label_19:
      while (true) {
        jj_consume_token(EOL);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_19;
        }
      }
      functinal_declaration_block();
      jj_consume_token(END_BLOCK);
      jj_consume_token(EOL);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void declare_list() throws ParseException {
 /*@bgen(jjtree) declare_list */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLARE_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(START_BRACKET);
      label_20:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IO_MODULE:
        case LIST_MODULE:
        case START_BRACKET:
        case START_PARAM:
        case START_BLOCK:
        case GENERIC_ID:
        case NUMBER:
        case STRING:
        case BOOLEAN:
          ;
          break;
        default:
          jj_la1[29] = jj_gen;
          break label_20;
        }
        list_expression();
      }
      jj_consume_token(END_BRACKET);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }
